# LLM_MCP_RAG

./: .env.example  .gitignore  README.md  build_index.py  pyproject.toml  test_openai_chat.py
.data/index/: meta.json
agent/: __init__.py  chunkers.py  cli.py  config.py  embeddings.py  llm.py  logsetup.py  mcp_client.py  memory.py  orchestrator.py  retriever.py  schema.py  tool_router.py
agent/indexes/: hnsw_index.py  vector_index.py
config/: settings.py
data/: index.json
retriever/: chunker.py  embedder.py  indexer.py  pipeline.py  reader.py  store_hnsw.py
scripts/: hnsw_sanity.py
server/: http.py
tools/: file_server.py  math_server.py  tool_router.py
tools/mcp/: client.py
tools/mcp/servers/: code_server.py  file_server.py
